#                                               -*- Autoconf -*-
# Copyright (c) 2008 by cisco Systems, Inc.
# All rights reserved.
# Process this file with autoconf to produce a configure script.

AC_INIT(vppapigen, 1.0)
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC
AC_PROG_YACC
AM_PROG_CC_C_O

AC_OUTPUT([Makefile])
