#                                               -*- Autoconf -*-
# Copyright (c) 2008 by cisco Systems, Inc.
# All rights reserved.
# Process this file with autoconf to produce a configure script.

AC_INIT(vppapigen, 1.0)
AM_INIT_AUTOMAKE
AM_SILENT_RULES([yes])

# Checks for programs.
AC_PROG_CC
AC_PROG_YACC

AC_OUTPUT([Makefile])
